#1/feat: home page markup

--- a/index.html
+++ b/index.html
@@ -27,17 +27,64 @@
       </ul>
     </nav>
 
-    <main role="main" class="container">
-
-      <div class="starter-template">
-        <h1>Добро пожаловать на портал о белорусских писателях!</h1>
-        <p class="lead">Мы собрали и структурировали информацию в удобном виде,<br>так, что вам будет легко найти все необходимое!</p>
-      </div>
-
+    <main role="main">
+      <header>
+        <div class="starter-template">
+          <h1>Добро пожаловать на портал о белорусских писателях!</h1>
+          <p class="lead">Мы собрали и структурировали информацию в удобном виде,<br>так, что вам будет легко найти все необходимое!</p>
+        </div>
+      </header>
+      <section class="about">
+        <h2>О портале</h2>
+        <p>На страницах сайта вы найдете белорусских писателей с их биографией, расписанной по годам в удобном визуальном формате, списком самых известных произведений и годом их написания, публичными фотографиями, их видео выступления или документальные фильмы а также места их жизненной и творческой деятельности.</p>
+      </section>
+      <section class="author">
+          <h2>Автор дня</h2>
+          <div class="daily-author"></div>
+      </section>
+      <section class="team">
+          <h2>Над сайтом работали</h2>
+          <div class="persons">
+            <div class="person">
+              <img src="img/team/TanyaSamal.jpg" alt="TanyaSamal" class="person-pic"/>
+              <h3 class="name">Самаль Татьяна</h3>
+              <h4 class="git"><a href="https://github.com/TanyaSamal"><img src="img/github.png" alt="github" />tanyasamal</a></h4>
+              <p class="work">Организация / главная страница</p>
+            </div>
+            <div class="person">
+              <img src="img/team/kharuk.jpg" alt="Kharuk" class="person-pic"/>
+              <h3 class="name">Харук Анастасия</h3>
+              <h4 class="git"><a href="https://github.com/kharuk"><img src="img/github.png" alt="github" />kharuk</a></h4>
+              <p class="work">Страница автора</p>
+            </div>
+            <div class="person">
+              <img src="img/team/mbulldozer.jpg" alt="mbulldozer" class="person-pic"/>
+              <h3 class="name">Александр Павлюковец</h3>
+              <h4 class="git"><a href="https://github.com/mbulldozer"><img src="img/github.png" alt="github" />mbulldozer</a></h4>
+              <p class="work">Страница автора</p>
+            </div>
+            <div class="person">
+              <img src="img/team/VasiliyRepin.png" alt="VasiliyRepin" class="person-pic"/>
+              <h3 class="name">Василий Репин</h3>
+              <h4 class="git"><a href="https://github.com/VasiliyRepin"><img src="img/github.png" alt="github" />VasiliyRepin</a></h4>
+              <p class="work">Данные для портала</p>
+            </div>
+            <div class="person">
+                <img src="img/team/igor82bv.png" alt="igor82bv" class="person-pic"/>
+                <h3 class="name">Игорь Баранов</h3>
+                <h4 class="git"><a href="https://github.com/igor82bv"><img src="img/github.png" alt="github" />igor82bv</a></h4>
+                <p class="work">Список писателей / поиск</p>
+              </div>
+          </div>
+      </section>
+      <footer>
+          &copy; 2019 / RSSchool Group 8
+      </footer>
     </main>
-
+    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script src="js/home.js"></script>
   </body>
 </html>
