#4/feat: add json  writer-list

--- a/index.html
+++ b/index.html
@@ -75,43 +75,22 @@
         <div class="content">
           <div class="writer">
             <div class="left-part">
+              <a href="#"><img src="img/photo/Shamyakin.jpg" alt="photo"/></a>
+            </div>
+
+            <div class="right-part">
+              <a href="#"><span class="name"></span></a>
+              <span class="date-of-birth"></span> <span class="location"></span>
+            </div>
+          </div>
+          <div class="writer">
+            <div class="left-part">
               <a href="#"><img src="img/photo/Aliksevich.jpg" alt="photo"/></a>
             </div>
 
             <div class="right-part">
-              <a href="#"
-                ><span class="name">Светлана Александровна Алексиевич</span></a
-              >
-              <span class="date-of-birth">31 мая 1948</span>
-              <span class="location">Станислав, Россия</span>
-            </div>
-          </div>
-          <div class="writer">
-            <div class="left-part">
-              <a href="#"><img src="img/photo/Arlou.jpg" alt="photo"/></a>
-            </div>
-
-            <div class="right-part">
-              <a href="#"
-                ><span class="name">Орлов Владимир Алексеевич</span></a
-              >
-              <span class="date-of-birth">25 августа 1953</span>
-              <span class="location">Полоцк, Беларусь</span>
-            </div>
-          </div>
-          <div class="writer">
-            <div class="left-part">
-              <a href="#"><img src="img/photo/Bykov.jpg" alt="photo"/></a>
-            </div>
-
-            <div class="right-part">
-              <a href="#"
-                ><span class="name">Быков Василь Владимирович</span></a
-              >
-              <span class="date-of-birth">19 июня 1924</span>
-              <span class="location"
-                >деревня Бычки Витебская обл., Беларусь</span
-              >
+              <a href="#"><span class="name"></span></a>
+              <span class="date-of-birth"></span> <span class="location"></span>
             </div>
           </div>
           <div class="writer">
@@ -120,22 +99,28 @@
             </div>
 
             <div class="right-part">
-              <a href="#"
-                ><span class="name">Короткевич Владимир Семёнович</span></a
-              >
-              <span class="date-of-birth">26 ноября 1930</span>
-              <span class="location">Минск, Беларусь</span>
+              <a href="#"><span class="name"></span></a>
+              <span class="date-of-birth"></span> <span class="location"></span>
             </div>
           </div>
           <div class="writer">
             <div class="left-part">
-              <a href="#"><img src="img/photo/Shamyakin.jpg" alt="photo"/></a>
+              <a href="#"><img src="img/photo/Bykov.jpg" alt="photo"/></a>
             </div>
 
             <div class="right-part">
-              <a href="#"><span class="name">Шамякин Иван Петрович</span></a>
-              <span class="date-of-birth">30 января 1921</span>
-              <span class="location">Минск, Беларусь</span>
+              <a href="#"><span class="name"></span></a>
+              <span class="date-of-birth"></span> <span class="location"></span>
+            </div>
+          </div>
+          <div class="writer">
+            <div class="left-part">
+              <a href="#"><img src="img/photo/Arlou.jpg" alt="photo"/></a>
+            </div>
+
+            <div class="right-part">
+              <a href="#"><span class="name"></span></a>
+              <span class="date-of-birth"></span> <span class="location"></span>
             </div>
           </div>
         </div>
@@ -157,6 +142,8 @@
       integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
       crossorigin="anonymous"
     ></script>
+    <script src="data/data.js"></script>
+    <script src="script/list-writers.js"></script>
     <script src="script/serch.js"></script>
   </body>
 </html>
