--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
       <section class="list-writers">
         <form class="field-serch">
-            <input  type="text" class="search"  placeholder="Введите имя, город" value=""></input>
+            <input  type="text" class="search"  placeholder="Введите или год" value=""></input>
             <button type="button" class="btn btn-outline-secondary">Поиск</button>
         </form>     
             <div class="daily-author"></div>             
