--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
       <a class="navbar-brand" href="/"></a>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#"></a>
+          <a class="nav-link" href="/html/list.html"></a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-            
           </a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="#"></a>
