--- a/html/list-writers.html
+++ b/html/list-writers.html
@@ -17,16 +17,16 @@
       name="description"
       content="Информационный портал о писателях Беларуси. Разработка команды RSSchool #8"
     />
-    <link href="css/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/list-writers.css" />
-    <link rel="stylesheet" href="css/list-wrirers-media-screen.css" />
+    <link href="../css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../css/list-writers.css" />
+    <link rel="stylesheet" href="../css/list-wrirers-media-screen.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <a class="navbar-brand" href="/">Писатели Беларуси</a>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Список писателей</a>
+          <a class="nav-link" href="/list-writers.html">Список писателей</a>
         </li>
         <li class="nav-item dropdown">
           <a
@@ -49,13 +49,17 @@
 
       <section class="list-writers">
         <form class="field-serch">
-            <input  type="text" class="search"  placeholder="Введите или год" value=""></input>
+            <input  type="text" class="search"  placeholder="Введите имя, место или год" value=""></input>
             <button type="button" class="btn btn-outline-secondary">Поиск</button>
         </form>     
             <div class="daily-author"></div>             
       </section>
 
+
     </main>
+    <footer>
+        &copy; 2019 / RSSchool Group 8
+    </footer>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -73,6 +77,6 @@
       crossorigin="anonymous"
     ></script>
         
-    <script src="script/serch.js"></script>
+    <script src="../js/serch.js"></script>
   </body>
 </html>
