#9/feat: translate writer's list page

--- a/html/list-writers.html
+++ b/html/list-writers.html
@@ -46,16 +46,15 @@
     </nav>
 
     <main role="main" class="container">
-
-      <section class="list-writers">
-        <form class="field-serch">
-            <input  type="text" class="search"  placeholder="Введите имя, место или год" value=""></input>
-            <button type="button" class="btn btn-outline-secondary">Поиск</button>
-        </form>     
-            <div class="daily-author"></div>             
+        <section class="list-writers">
+            <div class="control">
+              <input type="text" class="form-control" placeholder="Введите имя, место или год" aria-describedby="basic-addon2">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button">Искать</button>
+              </div>
+            </div>
+            <div class="daily-author"></div>         
       </section>
-
-
     </main>
     <footer>
         &copy; 2019 / RSSchool Group 8
@@ -78,5 +77,6 @@
     ></script>
         
     <script src="../js/serch.js"></script>
+    <script src="../js/translate.js"></script>
   </body>
 </html>
