--- a/html/list-writers.html
+++ b/html/list-writers.html
@@ -26,7 +26,7 @@
       <a class="navbar-brand" href="/">Писатели Беларуси</a>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/list-writers.html">Список писателей</a>
+          <a class="nav-link" href="list-writers.html">Список писателей</a>
         </li>
         <li class="nav-item dropdown">
           <a
@@ -50,7 +50,7 @@
             <div class="control">
               <input type="text" class="form-control" placeholder="Введите имя, место или год" aria-describedby="basic-addon2">
               <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">Искать</button>
+                <button class="btn btn-outline-secondary" type="button"></button>
               </div>
             </div>
             <div class="daily-author"></div>         
