--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a class="navbar-brand" href="/"></a>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/html/list.html"></a>
+          <a class="nav-link" href="./html/list-writers.html"></a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
