fix: change script name

--- a/html/author-info.html
+++ b/html/author-info.html
@@ -13,7 +13,7 @@
       <a class="navbar-brand" href="/">Писатели Беларуси</a>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Список писателей</a>
+          <a class="nav-link" href="list-writers.html">Список писателей</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
@@ -37,7 +37,7 @@
     <script src="../js/author-info.template.js"></script>
     <script src="../js/timeline.template.js"></script>
     <script src="../js/works.template.js"></script>
-    <script src="../js/autor-info-generation.js"></script>
+    <script src="../js/author-info-generation.js"></script>
     <script src="../js/author-info.js"></script>
   </body>
 </html>
