--- a/html/author-info.html
+++ b/html/author-info.html
@@ -10,27 +10,29 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-      <a class="navbar-brand" href="/">Писатели Беларуси</a>
+      <a class="navbar-brand" href="/"></a>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="list-writers.html">Список писателей</a>
+          <a class="nav-link" href="list-writers.html"></a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-            Русский
+            
           </a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Беларускi</a>
-            <a class="dropdown-item" href="#">English</a>
+            <a class="dropdown-item" href="#"></a>
+            <a class="dropdown-item" href="#"></a>
           </div>
         </li>
       </ul>
     </nav>
 
     <div id="container">
-
-
     </div>
+    <footer>
+        &copy; 2019 / RSSchool Group 8
+    </footer>
+    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
@@ -39,5 +41,6 @@
     <script src="../js/works.template.js"></script>
     <script src="../js/author-info-generation.js"></script>
     <script src="../js/author-info.js"></script>
+    <script src="../js/translate.js"></script>
   </body>
 </html>
