fix: add normal view of writer-block at mobile, adaptive

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <p></p>
       </section>
       <section class="author">
-          <h2></h2>
-          <div class="daily-author"></div>
+        <h2></h2>
+          <div class="container daily-author"></div> <!--  daily-author -->
       </section>
       <section class="team">
           <h2></h2>
