#9/feat: add localstorage for language

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               </div>
               <div class="col-sm-12 col-md-6 col-lg-2">
                 <div class="person">
-                <img src="img/team/igor82bv.png" alt="igor82bv" class="person-pic"/>
+                <img src="img/team/igor82bv.jpg" alt="igor82bv" class="person-pic"/>
                 <h3 class="name"></h3>
                 <h4 class="git"><a href="https://github.com/igor82bv"><img src="img/github.png" alt="github" />igor82bv</a></h4>
                 <p class="work"></p>
