--- a/html/author-info.html
+++ b/html/author-info.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-      <a class="navbar-brand" href="/"></a>
+      <a class="navbar-brand" href="../"></a>
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="list-writers.html"></a>
