--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-      <a class="navbar-brand" href="/"></a>
+      <a class="navbar-brand" href="./"></a>
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="./html/list-writers.html"></a>
